--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.codepath.apps.SimpleTweets.ComposeActivity">
+    tools:context="com.codepath.apps.SimpleTweets.ComposeActivity"
+    android:background="#ffffff">
 
     <EditText
         android:layout_width="wrap_content"
@@ -20,7 +21,8 @@
         android:layout_alignParentEnd="true"
         android:layout_above="@+id/btnSubmit"
         android:gravity="left|top"
-        android:hint="What&apos;s happening?" />
+        android:hint="What&apos;s happening?"
+        android:background="#ffffff" />
 
     <Button
         android:layout_width="wrap_content"
@@ -29,8 +31,11 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:textAllCaps="false"
         android:text="Tweet"
-        android:onClick="onSubmit"/>
+        android:onClick="onSubmit"
+        android:background="#55acee"
+        android:textColor="#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
