--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codepath.apps.SimpleTweets.ProfileActivity">
+    tools:context="com.codepath.apps.SimpleTweets.ProfileActivity"
+    android:background="#ffffff">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -11,7 +12,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/rlUserHeader">
+        android:padding="5dp"
+        android:id="@+id/rlUserHeader"
+        android:background="#ffffff">
 
         <ImageView
             android:id="@+id/ivProfileImage"
@@ -29,7 +32,9 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/ivProfileImage"
             android:text="Name"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="#000000" />
 
         <TextView
             android:id="@+id/tvTagline"
@@ -46,9 +51,11 @@
         android:id="@+id/llCounts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:layout_marginBottom="10dp"
         android:layout_below="@+id/rlUserHeader"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#ffffff">
 
         <TextView
             android:id="@+id/tvFollowers"
@@ -71,7 +78,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/flContainer"
-        android:layout_below="@+id/llCounts">
+        android:layout_below="@+id/llCounts"
+        android:background="#ffffff">
     </FrameLayout>
 
 
