--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -12,6 +12,12 @@
         app:pstsTextAllCaps="true"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:background="#FFFFFF"
+        android:textColor="#55ACEE"
+        app:pstsDividerColor="#55ACEE"
+        app:pstsIndicatorColor="#55ACEE"
+        app:pstsUnderlineColor="#55ACEE"
+        app:pstsIndicatorHeight="5dp"
         />
 
     <android.support.v4.view.ViewPager
