--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:id="@+id/RelativeLayout"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:background="#ffffff">
 
     <ImageView
         android:layout_width="50dp"
